fix(treeview): reduce spacing between checkbox and item text

--- a/packages/default/scss/treeview/_layout.scss
+++ b/packages/default/scss/treeview/_layout.scss
@@ -69,6 +69,9 @@
         .k-in .k-sprite {
             margin-right: $icon-spacing;
         }
+        .k-checkbox-label {
+            padding-left: $icon-size;
+        }
 
     }
 
